--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@
 # Jetbrains Rider personal-layer settings
 *.DotSettings.user
 
+# Ignore Rider .idea folder
+.idea/
+
 # Visual Studio cache directory
 .vs/
 
